--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ dependencies {
 	//의존선 추가 설정 end
 	
 	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	//runtimeOnly 'com.mysql:mysql-connector-j'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+	runtimeOnly 'com.mysql:mysql-connector-j'
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
