아작스 통신을 이용한 버튼으로 회원가입등 구현중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,31 @@ server:
     context-path: /
     
 spring:
+  mvc:
+    view:
+      prefix: /WEB-INF/view
+      suffix: .jsp
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/green_blog?serverTimezone=Asia/seoul
+    url: jdbc:mysql://localhost:3306/green_blog?serverTimezone=Asia/Seoul
     username: ten
     password: 1q2w3e4r5t!
+  
+  jpa:
+    open-in-view: true
+    hibernate:
+      ddl-auto: update #create  
+      naming:
+        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+        #physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+      use-new-id-generator-mappings: true
+    show-sql: true
+    properties:
+      hibernate: 
+        format_sql: true      
+    
+
+  jackson:
+    serialization:
+      fail-on-empty-beans: false  
+    
